# snailplusplus

./: .gitignore  CHANGELOG  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
assets/: names.json  names.ts  raw_pixels.py
assets/bitmap_font/: generate.py
snail-lattice/: Cargo.toml
snail-lattice/benches/: automaton_snail_tick.rs  fluid_snail_tick.rs
snail-lattice/pkg/: snail_lattice.js  snail_lattice_bg.js  snail_lattice_bg.wasm
snail-lattice/src/: comparison.rs  direction.rs  image.rs  lattice.rs  lfsr.rs  lib.rs  manual.rs  manual_maze.rs  maze.rs  snail.rs  snail_lattice.rs  snail_maze.rs  utils.rs
snail-lattice/src/manual/: asteroids.rs  falling_snails.rs  mod.rs  pacsnail.rs  wolfenstein.rs
snail-lattice/src/snail_maze/: hold_left.rs  mod.rs  random_walk.rs
snail-lattice/src/solvers/: automaton.rs  clones.rs  demolitionist.rs  fluid.rs  flying.rs  hold_left.rs  inverted.rs  learning.rs  mod.rs  random_teleport.rs  random_walk.rs  rpg.rs  telepathic.rs  time_travel.rs  tremaux.rs
src/: App.tsx  AutoMazes.tsx  AverageProvider.tsx  Changelog.tsx  Game.tsx  PlayableWindow.tsx  Popover.tsx  ScoreProvider.tsx  Shop.tsx  ShopProvider.tsx  Sidebar.tsx  SnailInfoProvider.tsx  SnailMaze.tsx  SnailWindow.tsx  Upgrade.tsx  UpgradesProvider.tsx  app.tsx  drawMaze.ts  engine.ts  generateMaze.ts  globals.ts  index.css  index.tsx  latticeWorker.ts  mazeMesher.ts  util.ts  utils.ts  zIndexManager.ts
src/algorithms/: HoldLeft.tsx  Player.tsx  RandomWalk.tsx
src/pages/: main.tsx
src/state/: position.ts  shop.ts
