[package]
name = "snail-lattice"
version = "0.1.1"
authors = ["kilometers <kilo@meters.sh>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lattice-comparison"
path = "src/comparison.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.bench]
debug = true
opt-level = 3
lto = true
panic = "abort"
